[project]
name = "hydra-grid-aware"
version = "0.1.0"
description = ""
authors = [
    {name = "Nick van der Burgt",email = "nvanderburgt@infiniot.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography (>=44.0.2,<45.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
